fixed bug with modal window size on mobile

--- a/src/components/ModalWindow/ModalWindow.less
+++ b/src/components/ModalWindow/ModalWindow.less
@@ -171,7 +171,18 @@
 }
 
 .payment-notification-window {
+  @media (max-width: 1000px) {
+    & {
+      max-width: 70vw !important;
+    }
+  }
 
+  @media (max-width: 500px) {
+    & {
+      max-width: 100vw !important;
+      padding: 0 !important;
+    }
+  }
 }
 
 
