--- a/src/components/Sidebar/Sidebar.less
+++ b/src/components/Sidebar/Sidebar.less
@@ -465,9 +465,12 @@ a.top-nav-link {
   }
 }
 
-/*
-* for delete
-*/
+@media (max-width: 500px) {
+  .sidebar {
+    z-index: 10;
+  }
+}
+
 
 //   ================================================================
 
